Fix navbar alignment

--- a/Week-2/Assignment-6/src/App.css
+++ b/Week-2/Assignment-6/src/App.css
@@ -1,16 +1,10 @@
-body {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-nav {
+.nav {
   display: flex;
   background-color: #f0f0f0;
   padding: 0 2em;
+  align-items: center;
 }
-main .main-upper {
+.main .main-upper {
   display: flex;
   justify-content: center;
   background-color: #cfdcec;
@@ -69,6 +63,7 @@ nav {
 
 a {
   text-decoration: none;
+  margin: 10px;
 }
 
 a:visited {
